fix: scrollbar styling

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -77,6 +77,7 @@ div.toasted.toasted-primary.success {
 div.toasted.toasted-primary.error {
     @apply bg-red-600
 }
+
 /*</editor-fold>*/
 
 /*<editor-fold desc="Tooltip" defaultstate="collapsed">*/
@@ -86,11 +87,13 @@ div.toasted.toasted-primary.error {
     font-size: 0.85rem;
     max-width: 20em;
 }
+
 .tooltip .tooltip-inner {
     @apply rounded shadow-lg py-2 px-3 text-justify;
     background: theme("colors.gray.700");
     color: white;
 }
+
 .tooltip .tooltip-arrow {
     width: 0;
     height: 0;
@@ -100,9 +103,11 @@ div.toasted.toasted-primary.error {
     border-color: theme("colors.gray.700");
     z-index: 1;
 }
+
 .tooltip[x-placement^=top] {
     margin-bottom: 5px;
 }
+
 .tooltip[x-placement^=top] .tooltip-arrow {
     border-width: 5px 5px 0 5px;
     border-left-color: transparent !important;
@@ -113,9 +118,11 @@ div.toasted.toasted-primary.error {
     margin-top: 0;
     margin-bottom: 0;
 }
+
 .tooltip[x-placement^=bottom] {
     margin-top: 5px;
 }
+
 .tooltip[x-placement^=bottom] .tooltip-arrow {
     border-width: 0 5px 5px 5px;
     border-left-color: transparent !important;
@@ -126,9 +133,11 @@ div.toasted.toasted-primary.error {
     margin-top: 0;
     margin-bottom: 0;
 }
+
 .tooltip[x-placement^=right] {
     margin-left: 5px;
 }
+
 .tooltip[x-placement^=right] .tooltip-arrow {
     border-width: 5px 5px 5px 0;
     border-left-color: transparent !important;
@@ -139,9 +148,11 @@ div.toasted.toasted-primary.error {
     margin-left: 0;
     margin-right: 0;
 }
+
 .tooltip[x-placement^=left] {
     margin-right: 5px;
 }
+
 .tooltip[x-placement^=left] .tooltip-arrow {
     border-width: 5px 0 5px 5px;
     border-top-color: transparent !important;
@@ -152,6 +163,7 @@ div.toasted.toasted-primary.error {
     margin-left: 0;
     margin-right: 0;
 }
+
 .tooltip.popover .popover-inner {
     background: #f9f9f9;
     color: black;
@@ -159,45 +171,75 @@ div.toasted.toasted-primary.error {
     border-radius: 5px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.1);
 }
+
 .tooltip.popover .popover-arrow {
     border-color: #f9f9f9;
 }
+
 .tooltip[aria-hidden=true] {
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.15s, visibility 0.15s;
 }
+
 .tooltip[aria-hidden=false] {
     visibility: visible;
     opacity: 1;
     transition: opacity 0.15s;
 }
+
 /*</editor-fold>*/
 
 /*<editor-fold desc="Scrollbar" defaultstate="collapsed">*/
 /* Turn on custom 8px wide scrollbar */
 ::-webkit-scrollbar {
-    width: 8px; /* 1px wider than Lion. */
-    /* This is more usable for users trying to click it. */
-    background-color: rgba(0,0,0,0);
+    width: 10px;
+    height: 10px;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar, ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 100px;
 }
+
 /* hover effect for both scrollbar area, and scrollbar 'thumb' */
 ::-webkit-scrollbar:hover {
     background-color: rgba(0, 0, 0, 0.09);
 }
 
 /* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
-::-webkit-scrollbar-thumb:vertical {
-    /* This is the EXACT color of Mac OS scrollbars.
-       Yes, I pulled out digital color meter */
-    background: rgba(0,0,0,0.5);
-    -webkit-border-radius: 100px;
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5);
 }
-::-webkit-scrollbar-thumb:vertical:active {
-    background: rgba(0,0,0,0.61); /* Some darker color when you click it */
-    -webkit-border-radius: 100px;
+
+::-webkit-scrollbar-thumb:active {
+    background: rgba(0, 0, 0, 0.61);
 }
+
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
+@screen dark {
+    ::-webkit-scrollbar {
+        background-color: rgba(200, 200, 200, 0);
+    }
+
+    /* hover effect for both scrollbar area, and scrollbar 'thumb' */
+    ::-webkit-scrollbar:hover {
+        background-color: rgba(200, 200, 200, 0.09);
+    }
+
+    /* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
+    ::-webkit-scrollbar-thumb {
+        background: rgba(200, 200, 200, 0.5);
+    }
+
+    ::-webkit-scrollbar-thumb:active {
+        background: rgba(200, 200, 200, 0.61);
+    }
+}
+
 /*</editor-fold>*/
 
 @tailwind components;
